--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "copy-webpack-plugin": "^9.1.0",
         "css-loader": "^6.5.1",
         "css-minimizer-webpack-plugin": "^3.1.1",
+        "ejs-loader": "^0.5.0",
+        "ejs-webpack-loader": "^2.2.2",
         "eslint": "^8.2.0",
         "eslint-config-airbnb": "^19.0.0",
         "eslint-plugin-import": "^2.25.3",
@@ -41,10 +43,8 @@
         "webpack": "^5.64.0",
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.9.1",
-        "webpack-dev-server": "^4.4.0",
-        "webpack-merge": "^5.8.0",
-        "ejs-loader": "^0.5.0",
-        "ejs-webpack-loader": "^2.2.2"
+        "webpack-dev-server": "^4.11.1",
+        "webpack-merge": "^5.8.0"
     },
     "engines": {
         "node": "^12 || >=14"
@@ -79,7 +79,7 @@
         "handlebars": "^4.7.7",
         "imagesloaded": "^4.1.4",
         "jquery": "^3.6.0",
-        "jquery-validation": "^1.19.3",
+        "jquery-validation": "^1.19.5",
         "rive-js": "0.7.16",
         "scrollmagic": "^2.0.8",
         "smooth-scrollbar": "^8.7.4",
