--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     },
     "target": "web",
     "dependencies": {
+        "animejs": "^3.2.1",
         "ejs-webpack-loader": "^2.2.2",
         "firebase": "^9.6.8",
         "gsap": "^3.9.1",
